k8s-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: message-system-prod
  labels:
    env: production
