k8s-prod/01-strimzi-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-system
  labels:
    env: production
